# systech-aidd

./: .coverage  .dockerignore  .dockerignore.api  .dockerignore.bot  .env.example  .gitignore  Dockerfile.api  Dockerfile.bot  Dockerfile.frontend  Makefile  README-F-SPRINT-5.md  README.md  alembic.ini  docker-compose.prod.production.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint-api.sh  env.example  env.production  pyproject.toml
.cursor/commands/: docreview.md  review.md
.cursor/plans/: d-sprint-0-basic-docker-0e3b1789.plan.md  d1-build---publish-d2101771.plan.md  d2-server-deployment-02dc57cb.plan.md  f-sprint-1-mock-api-ebc6cb41.plan.md  f-sprint-2-frontend-init-fafce97a.plan.md  f-sprint-4-ai-chat-c6bb1035.plan.md  f-sprint-5-real-api-93d93ed6.plan.md  f-sprint-6-auth-rbac-b4751b1f.plan.md  sprint-3-dashboard-implementation-5c955ed7.plan.md  sprint-s1-database-persistence-721279ec.plan.md  sprint-s2-user-management-150b2df4.plan.md
.cursor/rules/: conventions.mdc  qa_conventions.mdc  workflow.mdc  workflow_tdd.mdc  workflow_tech_debt.mdc
.github/workflows/: build.yml
devops/doc/: devops-roadmap.md
docs/: conventions.md  idea.md  roadmap.md  tasklist.md  tasklist_tech_debt.md  tech_debt_report.md  vision.md  workflow.md  workflow_tech_debt.md
docs/addrs/: ADR-01.md  ADR-02.md  ADR-03.md  ADR-04.md
docs/guides/: 01-getting-started.md  02-developer-quickstart.md  (+4 more)
migrations/: env.py
src/: __init__.py
tests/: conftest.py  test_bot.py  test_command_handler.py  test_config.py  test_dialogue_manager.py  test_llm_client.py  test_main.py  test_media_processor.py  test_message_handler.py
(+133 files in other folders)
