[project]
name = "systech-aidd"
version = "0.1.0"
description = "LLM-powered Telegram bot"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

